--- a/css/admin_css/jquery.dataTables.min_AdminDash.css
+++ b/css/admin_css/jquery.dataTables.min_AdminDash.css
@@ -279,7 +279,7 @@ table.dataTable, table.dataTable th, table.dataTable td {
     border: 1px solid #aaa;
     border-radius: 3px;
     padding: 5px;
-    background-color: transparent;
+    background-color: white;
     padding: 4px
 }
 
@@ -292,7 +292,7 @@ table.dataTable, table.dataTable th, table.dataTable td {
     border: 1px solid #aaa;
     border-radius: 3px;
     padding: 5px;
-    background-color: transparent;
+    background-color: white;
     margin-left: 3px
 }
 
@@ -324,7 +324,7 @@ table.dataTable, table.dataTable th, table.dataTable td {
 }
 
 .dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
-    color: #333 !important;
+    /* color: #333 !important;
     border: 1px solid #979797;
     background-color: white;
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(100%, #dcdcdc));
@@ -332,7 +332,17 @@ table.dataTable, table.dataTable th, table.dataTable td {
     background: -moz-linear-gradient(top, white 0%, #dcdcdc 100%);
     background: -ms-linear-gradient(top, white 0%, #dcdcdc 100%);
     background: -o-linear-gradient(top, white 0%, #dcdcdc 100%);
-    background: linear-gradient(to bottom, white 0%, #dcdcdc 100%)
+    background: linear-gradient(to bottom, white 0%, #dcdcdc 100%) */
+
+    color: #EEEEEE !important;
+    border: 1px solid #124254;
+    background-color: #124254;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2b97be), color-stop(100%, #124254));
+    background: -webkit-linear-gradient(top, #2b97be  0%, #124254 100%);
+    background: -moz-linear-gradient(top, #2b97be 0%, #124254 100%);
+    background: -ms-linear-gradient(top, #2b97be 0%, #124254 100%);
+    background: -o-linear-gradient(top, #2b97be 0%, #124254  100%);
+    background: linear-gradient(to bottom, #2b97be 0%, #124254  100%)
 }
 
 .dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
@@ -344,27 +354,38 @@ table.dataTable, table.dataTable th, table.dataTable td {
 }
 
 .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
-    color: white !important;
-    border: 1px solid #111;
-    background-color: #585858;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #585858), color-stop(100%, #111));
-    background: -webkit-linear-gradient(top, #585858 0%, #111 100%);
-    background: -moz-linear-gradient(top, #585858 0%, #111 100%);
-    background: -ms-linear-gradient(top, #585858 0%, #111 100%);
-    background: -o-linear-gradient(top, #585858 0%, #111 100%);
-    background: linear-gradient(to bottom, #585858 0%, #111 100%)
+    /* color: #EEEEEE !important;
+    border: 1px solid #124254;
+    background-color: #124254;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2b97be), color-stop(100%, #124254));
+    background: -webkit-linear-gradient(top, #2b97be  0%, #124254 100%);
+    background: -moz-linear-gradient(top, #2b97be 0%, #124254 100%);
+    background: -ms-linear-gradient(top, #2b97be 0%, #124254 100%);
+    background: -o-linear-gradient(top, #2b97be 0%, #124254  100%);
+    background: linear-gradient(to bottom, #2b97be 0%, #124254  100%) */
+
+    color: #333 !important;
+    border: 1px solid #979797;
+    background-color: white;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(100%, #dcdcdc));
+    background: -webkit-linear-gradient(top, white 0%, #dcdcdc 100%);
+    background: -moz-linear-gradient(top, white 0%, #dcdcdc 100%);
+    background: -ms-linear-gradient(top, white 0%, #dcdcdc 100%);
+    background: -o-linear-gradient(top, white 0%, #dcdcdc 100%);
+    background: linear-gradient(to bottom, white 0%, #dcdcdc 100%)
+
 }
 
 .dataTables_wrapper .dataTables_paginate .paginate_button:active {
     outline: none;
     background-color: #2b2b2b;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2b2b2b), color-stop(100%, #0c0c0c));
+    /* background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2b2b2b), color-stop(100%, #0c0c0c));
     background: -webkit-linear-gradient(top, #2b2b2b 0%, #0c0c0c 100%);
     background: -moz-linear-gradient(top, #2b2b2b 0%, #0c0c0c 100%);
     background: -ms-linear-gradient(top, #2b2b2b 0%, #0c0c0c 100%);
     background: -o-linear-gradient(top, #2b2b2b 0%, #0c0c0c 100%);
     background: linear-gradient(to bottom, #2b2b2b 0%, #0c0c0c 100%);
-    box-shadow: inset 0 0 3px #111
+    box-shadow: inset 0 0 3px #111 */
 }
 
 .dataTables_wrapper .dataTables_paginate .ellipsis {
