--- a/css/admin_css/admin_Pos.css
+++ b/css/admin_css/admin_Pos.css
@@ -238,7 +238,7 @@ body{
   /*Datatable*/
 
   div.container {
-    background-color: #dddddd;
+    background-color: rgba(255, 255, 255, 0.7);
     padding: 1rem;
     margin-top: 3%;
     margin-bottom: 8%;
@@ -637,7 +637,8 @@ body{
 
 
   .dataTables_info {
-    margin-top: 25px;
+  margin-top: 25px;
+  display: inline-block;
   }
 
   .padThisCell {
@@ -949,10 +950,6 @@ body{
     width: 100%
   }
 
-  .dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper .dataTables_paginate {
-    color: white;
-  }
-
   .dataTables_wrapper .dataTables_length select {
     border: 1px solid #aaa;
     border-radius: 3px;
@@ -966,7 +963,7 @@ body{
 
   .dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
     cursor: default;
-    color: white;
+    color: #777777;
     border: 1px solid transparent;
     background: transparent;
     box-shadow: none;
@@ -1047,12 +1044,6 @@ body{
     box-shadow: none;
     background-color: #dddddd !important;
   }
-
-  a.paginate_button:hover {
-
-    color: #ddd;
-  }
-
   .dataTables_wrapper .dataTables_length select {
     background-color: white !important;
     color: #333 !important;
@@ -1073,6 +1064,10 @@ body{
 
   .dataTables_wrapper .dataTables_filter input{
     display:inline;
+    border: 1px solid #aaa;
+    border-radius: 3px;
+    padding: 5px;
+    margin-left: 3px;
   }
 
 .inp_container{
@@ -1179,6 +1174,7 @@ margin-left:5px !important;
 
 .paginate_button{
   color:#337ab7;
+  padding: .5em 1em;
 }
 
 #add_button:hover, #defaultButton:hover, #add-candidate:hover{
@@ -1268,12 +1264,6 @@ background-color:#D3D3D3
 background-color: rgb(236, 239, 240);
 }
 
-.dataTables_paginate{
-  margin-top: 25px;
-    background-color: #EEEEEE !important;
-    border-color: #ddd;
-    padding-top: 0 !important;
-}
 
 .paginate_button.disabled{
     color: #777777;
@@ -1281,9 +1271,53 @@ background-color: rgb(236, 239, 240);
     border-color: #ddd;
 }
 
-.dataTables_wrapper .dataTables_paginate .paginate_button.current{
-  background-color: #124254 !important;
-  color: white !important;
-  background: #124254 !important;
-  border: none !important;
+
+#datatable_length{
+  margin-left: 20px;
+  display: contents;
+}
+
+div.dataTables_paginate{
+    margin: 0;
+    white-space: nowrap;
+    text-align: right;
+    float: right;
+    margin-top: 25px;
+}
+
+a.paginate_button{
+      position: relative;
+      float: left;
+      padding: 6px 12px;
+      margin-left: -1px;
+      line-height: 1.42857143;
+      color: #337ab7;
+      text-decoration: none;
+      background-color: #EEEEEE !important;
+      border: 1px solid #ddd;
+}
+
+.paginate_button:hover{
+    z-index: 2;
+    color: #23527c;
+    background-color: #eeeeee;
+    border-color: #ddd;
+    text-decoration: none !important;
+  }
+
+.paginate_button.current{
+      background-color: #124254 !important;
+      color: white;
+}
+
+.paginate_button:hover{
+      color: #23527c;
+}
+
+a.paginate_button.current:hover{
+  color: white;
+}
+
+div.btn-toolbar{
+  margin-left: 0 !important;
 }
