fixed access logs table width
- same width with other pages (for uniformity)
- bug: container width css not working
- fix: had to change width in boostrap css

--- a/css/admin_css/style_monitor.css
+++ b/css/admin_css/style_monitor.css
@@ -672,7 +672,7 @@ nav img.user-profile {
   }
   
   td {
-	font-family: 'Roboto-regular', sans-serif!t;
+	font-family: 'Roboto-regular', sans-serif;
 	font-size: 13pt;
 	border: 1px solid #124254;
 	max-width: 150px;
