--- a/css/admin_css/electionConfig.css
+++ b/css/admin_css/electionConfig.css
@@ -74,14 +74,19 @@ input[type="time"] {
     margin-top: 10px;
     padding: 10px;
     font-size: 15px;
-    color: black;
-    background: #ffc423;
+    color: #124254;
+    background-color: #fece4b;
+    border-bottom: 2px solid #fece4b;
     border: none;
     border-radius: 5px;
     font-family: 'Roboto-bold', sans-serif;
+    box-shadow: 1px 1px 5px #888888;
 }
 .btn:hover{
-    background-color: #e0a900;
+    color: #124254;
+    background-color: #ffc324;
+    border-bottom: 2px solid #ffc324;
+    outline: none;
 }
 
 .msg {
@@ -131,6 +136,9 @@ input, label {
 textarea {
     resize: none;
     width: 100%;
+    height: 300px;
+    padding: 1.5rem;
+    font-size: 20px !important;
     
   }
 
