--- a/css/student_css/style_monitor.css
+++ b/css/student_css/style_monitor.css
@@ -249,7 +249,7 @@
 	font-family: 'Roboto-regular', sans-serif;
   }
 
-/*Bar Graph*/
+/*Bar Graph
 .con1 {
 	max-width: 80%;
   z-index: 1000;
@@ -311,4 +311,58 @@
   padding: 8px;
   background: rgba(0, 0, 0, 0.3);
   animation: grow-padding-left 1s;
+}*/
+
+.Belec_container {
+  margin-left: 11%;
+  margin-right: 11%;
+  display: grid;
+  grid-gap: 30px;
+  grid-column: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
+  grid-template-rows: repeat(10, 200px);
+  text-align: center;
+  margin-top: 2%;
+}
+
+.Belec_container>div>img {
+  border-radius: 50%;
+}
+
+.Belec_container>div>p {
+  font-family: 'Roboto-regular', sans-serif;;
+  font-size: 15px;
+  object-fit: cover;
+  text-align: center;
+}
+.Bnum_votes {
+  margin-top: 1%;
+  font-family: 'Roboto-regular', sans-serif;;
+  color: rgb(177, 88, 88);
+  font-weight: bold;
+  text-align: center;
+  background-color: #fece4b;
+}
+.Bname {
+  font-family: 'Roboto-regular', sans-serif;;
+  font-size: 5%;
+  object-fit: cover;
+  text-align: center;
+  color: #003d55;
+}
+
+.Bposition {
+  font-family: 'Roboto-regular', sans-serif;;
+  font-size: 2%;
+  color:#1d6986;
+  font-weight: bold;
+  text-align: center;
+
+}
+
+.Bparty {
+  font-family: 'Roboto-regular', sans-serif;;
+  font-size: 2%;
+  color:black;
+  text-align: center;
 }
