--- a/css/admin_css/style_AdminDash.css
+++ b/css/admin_css/style_AdminDash.css
@@ -210,9 +210,9 @@ nav img.user-profile {
     margin-bottom: 60px;
   }
 }
-  
 
-@media only screen and (device-width: 320px) and (device-height: 640px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) { /*smartphones*/
+/*smartphones portrait specific height*/
+@media only screen and (device-width: 320px) and (device-height: 640px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) {
   body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
@@ -247,7 +247,8 @@ nav img.user-profile {
   }
 }
 
-@media only screen and (device-width: 320px) and (device-height: 640px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) { /*smartphones*/
+/*smartphones landscape with specific height*/
+@media only screen and (device-width: 320px) and (device-height: 640px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) {
   body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
@@ -282,7 +283,8 @@ nav img.user-profile {
   }
 }
 
-@media (max-width: 640px) { /*for larger phones like iphone 6-8*/
+/*for larger smartphones*/
+@media only screen and (max-width: 640px) {
   body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
@@ -292,7 +294,7 @@ nav img.user-profile {
   }
   #ADaside-container{
     float: left;
-    margin-left: 70px;
+    margin-left: 60px;
     margin-top: -50px;
   }
   #AD-CD-contents {
@@ -301,7 +303,104 @@ nav img.user-profile {
   }
 }
 
-@media only screen and (device-width: 768px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) { /*ipad portrait*/
+/* iPhone 6/7/8+ landscape */
+@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 3){
+  body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  section{
+    display: flex;
+    margin-left: 20px;
+    margin-top: 100px;
+    float: left;
+  }
+  article{
+    width: 100%;
+    /* flex-shrink: 2 !important; */
+  }
+  .ADcountdown {
+    font-size: auto;
+  }
+  #ADaside-container{
+    float: left !important;
+    margin-left: 60px;
+    margin-top: -60px;
+    margin-bottom: 40px;
+    max-width: 676px; /*736px - 60px*/
+    height: 100%;
+  }
+  #AD-CD-contents {
+    display: block;
+    font-size: auto;
+  }
+  .Aelec-guide-txt{
+    margin-bottom: 60px;
+  }
+}
+
+/* iPhone 6 ----------- */
+@media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2){
+    body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
+      -webkit-flex-direction: column;
+      flex-direction: column;
+    }
+    section{
+      display: flex;
+      margin-left: 20px;
+      margin-top: 100px;
+      float: left;
+    }
+    article{
+      width: 100%;
+      flex-shrink: 2 !important;
+    }
+    .ADcountdown {
+      font-size: auto;
+    }
+    #ADaside-container{
+      float: left;
+      margin-left: 60px;
+      margin-top: -60px;
+      margin-bottom: 40px;
+      max-width: 607px; /*667 width - 60 margin left*/
+      height: 100%;
+    }
+    #AD-CD-contents {
+      display: block;
+      font-size: auto;
+    }
+    .Aelec-guide-txt{
+      margin-bottom: 60px;
+    }
+}
+
+/*iphone X landscape*/
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: landscape) {
+
+  #ADaside-container{
+    float: left !important;
+    margin-left: 60px;
+    margin-top: -60px;
+    margin-bottom: 40px;
+    max-width: 752px; /*812px - 60px*/
+    height: 100%;
+  }
+  #AD-CD-contents {
+    display: block;
+    font-size: auto;
+  }
+  .Aelec-guide-txt{
+    margin-bottom: 60px;
+  }
+}
+
+/*ipad portrait*/
+@media only screen and (device-width: 768px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
   body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
@@ -325,7 +424,8 @@ nav img.user-profile {
   }
 }
 
-@media only screen and (device-width: 1024px) and (device-height: 768px) and (orientation:landscape) {  /*ipad landscape*/
+/*ipad landscape*/
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation:landscape) {
   body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
@@ -341,9 +441,6 @@ nav img.user-profile {
     margin-left: 160px;
     max-width: 700px;
   }
-  #AD-CD-headline{
-    font-weight: bold;
-  }
   .ADcountdown {
     font-size: auto;
   }
@@ -353,7 +450,8 @@ nav img.user-profile {
   }
 }
 
-@media only screen and (device-width: 768px) and (device-width: 1024px)  and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) { /*ipad pro potrait*/
+/*ipad pro potrait*/
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px)  and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
   body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
@@ -373,5 +471,35 @@ nav img.user-profile {
   #AD-CD-contents {
     display: block;
     font-size: auto;
+  }
+  #AD-CD-headline{
+    font-weight: normal;
+  }
+}
+
+/*ipad pro landscape*/
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape)  and (-webkit-min-device-pixel-ratio: 1) {
+  body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  section{
+    margin-top: 150px;
+    margin-left: 110px;
+  }
+  #ADaside-container{
+    float: left;
+    margin-left: 110px;
+    max-width: 800px;
+  }
+  .ADcountdown {
+    font-size: auto;
+  }
+  #AD-CD-contents {
+    display: block;
+    font-size: auto;
+  }
+  #AD-CD-headline{
+    font-weight: normal;
   }
 }
