--- a/css/student_css/style_monitor.css
+++ b/css/student_css/style_monitor.css
@@ -259,7 +259,7 @@
   animation: grow-padding-left 1s;
 }*/
 
-/*Vote Tally*/
+/*Vote Tally
 .Belec_container {
   display: grid;
   grid-gap: 20px;
@@ -306,4 +306,82 @@
   color:rgb(221, 46, 46);
   text-align: center;
   margin-top: -3.5%;
+}*/
+
+.Belection_container {
+	display: grid;
+	grid-gap: 40px;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 2fr));
+	grid-template-rows: repeat(6, auto);
+	padding-right: 5%;
+	padding-left: 5%;
+	padding-top: 4%;
 }
+.Bcan {
+	background-color:#1f6f8f;
+	color: white;
+	font-weight: initial;
+	width: 100%;
+  height: 35%;
+	text-align: center;
+  margin-top:2%;
+  font-family: 'Roboto-regular', sans-serif;
+}
+
+.Bcan span{
+  background: #0f3849;
+	width: 25%;
+  height: 100%;
+  font-family: 'Roboto-regular', sans-serif;
+	font-size: 140%;
+  float: right;
+}
+.Bposition1,
+.Bposition2,
+.Bposition3,
+.Bposition4,
+.Bposition5,
+.Bposition6,
+.Bposition7,
+.Bposition8,
+.Bposition9,
+.Bposition10,
+.Bposition11 {
+	padding: 20px;
+	width: 100%;
+	height: auto;
+	/*box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);*/
+  border-radius: 2px;
+}
+.Bposition1 h1,
+.Bposition2 h1,
+.Bposition3 h1,  
+.Bposition4 h1,
+.Bposition5 h1 {
+	color: black;
+	text-transform: uppercase;
+	font-family: 'Roboto-regular', sans-serif;
+	font-size: 120%;
+	position: relative;
+	text-align: center;
+	margin-top: 5px;
+  background-color: #ffb700;
+  width: 100%;
+  height: 35%;
+  border-radius: 2px;
+}
+.Bposition6 h1,
+.Bposition7 h1,
+.Bposition8 h1,
+.Bposition9 h1,
+.Bposition10 h1,
+.Bposition11 h1 {
+	color: rgb(0, 0, 0);
+	text-transform: uppercase;
+	font-family: 'Roboto-regular', sans-serif;
+	font-size: 200%;
+	position: relative;
+	text-align: center;
+	margin-top: -5px;
+}
+
