--- a/css/admin_css/style_AdminDash.css
+++ b/css/admin_css/style_AdminDash.css
@@ -60,6 +60,7 @@ img.logos {
   height: 90px;
   width: 100px;
   margin-bottom: 2em;
+  object-fit: contain;
 }
 
 .logo-container {
@@ -139,7 +140,54 @@ nav img.user-profile {
   width: 40px;
 }
 
+@media only screen and (max-device-width: 1000px) {
+  body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+}
+
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
+/* S5 Portrait */
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 4) 
+  and (orientation: portrait) {
+  
+  body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  section{
+    display: flex;
+    margin-left: 20px;
+    margin-top: 100px;
+    float: left;
+  }
+  article{
+    width: 100%;
+    flex-shrink: 2 !important;
+  }
+  .ADcountdown {
+    font-size: auto;
+  }
+  #ADaside-container{
+    float: left;
+    margin-left: 60px;
+    margin-top: -60px;
+    margin-bottom: 40px;
+    height: 100%;
+    max-width: 320px;
+  }
+  #AD-CD-contents {
+    display: block;
+    font-size: auto;
+  }
+  .Aelec-guide-txt{
+    margin-bottom: 60px;
+  }
+}
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
@@ -153,6 +201,11 @@ nav img.user-profile {
     margin-top: 100px;
     float: left;
   }
+  .logos{
+    object-fit: scale-down;
+    max-width:100%;
+    max-height:100%;
+  }
   article{
     width: 100%;
     flex-shrink: 2 !important;
@@ -166,47 +219,13 @@ nav img.user-profile {
     margin-top: -60px;
     margin-bottom: 40px;
     height: 100%;
+    max-width: 300px;
   }
   #AD-CD-contents {
     display: block;
     font-size: auto;
   }
   .Aelec-guide-txt{
-    margin-bottom: 60px;
-  }
-}
-
-/* Smartphones (portrait) ----------- */
-@media only screen and (max-width : 320px) {
-  body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
-    -webkit-flex-direction: column;
-    flex-direction: column;
-  }
-  section{
-    display: flex;
-    margin-left: 20px;
-    margin-top: 100px;
-    float: left;
-  }
-  article{
-    width: 100%;
-    flex-shrink: 2 !important;
-  }
-  .ADcountdown {
-    font-size: auto;
-  }
-  #ADaside-container{
-    float: left;
-    margin-left: 60px;
-    margin-top: -60px;
-    margin-bottom: 40px;
-    height: 100%;
-  }
-  #AD-CD-contents {
-    display: block;
-    font-size: auto;
-  }
-    .Aelec-guide-txt{
     margin-bottom: 60px;
   }
 }
@@ -261,7 +280,7 @@ nav img.user-profile {
   }
   article{
     width: 100%;
-    flex-shrink: 2 !important;
+    flex-shrink: 2;
   }
   .ADcountdown {
     font-size: auto;
@@ -283,11 +302,52 @@ nav img.user-profile {
   }
 }
 
-/*for larger smartphones*/
+/*smartphones portrait with specific height*/
+@media only screen and (device-width: 320px) and (device-height: 640px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) {
+  body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  section{
+    display: flex;
+    margin-left: 20px;
+    margin-top: 100px;
+    float: left;
+  }
+  article{
+    width: 100%;
+    flex-shrink: 2 !important;
+  }
+  .ADcountdown {
+    font-size: auto;
+  }
+  #ADaside-container{
+    float: left;
+    margin-left: 60px !important;
+    margin-top: -60px;
+    margin-bottom: 40px;
+    max-width: 240px;
+    height: 100%;
+  }
+  #AD-CD-contents {
+    display: block;
+    font-size: auto;
+  }
+  .Aelec-guide-txt{
+    margin-bottom: 60px;
+  }
+}
+
+/*for larger landscape smartphones*/
 @media only screen and (max-width: 640px) {
   body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
+  }
+  .logos{
+    object-fit: scale-down;
+    max-width:100%;
+    max-height:100%;
   }
   .ADcountdown {
     font-size: auto;
@@ -303,8 +363,58 @@ nav img.user-profile {
   }
 }
 
+/* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
+/* portrait */
+@media only screen and (device-height : 568px) {
+  body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  section{
+    display: flex;
+    margin-left: 20px;
+    margin-top: 100px;
+    float: left;
+  }
+  article p, article h1 {
+    width: 100%;
+    margin-right: 10px;
+    max-width: 90%;
+  }
+  .ADcountdown {
+    font-size: auto;
+  }
+  #ADaside-container{
+    float: left;
+    margin-left: 40px;
+    margin-top: -60px;
+    margin-bottom: 40px;
+    height: 100%;
+    /* transform: translate(-20px, 10px); */
+  }
+  #AD-CD-contents {
+    display: block;
+    font-size: auto;
+  }
+    .Aelec-guide-txt{
+    margin-bottom: 60px;
+  }
+}
+
+/*iPhone 6/7/8+ portrait for logo container*/
+@media only screen and (min-device-width: 414px)  and (orientation : portrait) and (-webkit-device-pixel-ratio: 3){
+  .logo-container{
+    max-width: 240px;
+    margin-right: 10px;
+  }
+  .logos{
+    object-fit: scale-down;
+    max-width:100%;
+    max-height:100%;
+  }
+}
 /* iPhone 6/7/8+ landscape */
-@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 3){
+@media only screen and (min-device-width: 414px)  and (orientation : landscape) and (-webkit-device-pixel-ratio: 3){
   body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
@@ -317,7 +427,6 @@ nav img.user-profile {
   }
   article{
     width: 100%;
-    /* flex-shrink: 2 !important; */
   }
   .ADcountdown {
     font-size: auto;
@@ -400,20 +509,19 @@ nav img.user-profile {
 }
 
 /*ipad portrait*/
-@media only screen and (device-width: 768px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
   body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
   }
   section{
-    margin-top: 30px;
-    float: left;
-    margin-left: 70px;
+    margin-top: 100px;
+    margin-left: 60px;
   }
   #ADaside-container{
     float: left;
-    margin-left: 130px;
-    margin-top: -50px;
+    margin-left: 60px;
+    max-width: 800px;
   }
   .ADcountdown {
     font-size: auto;
@@ -421,6 +529,9 @@ nav img.user-profile {
   #AD-CD-contents {
     display: block;
     font-size: auto;
+  }
+  #AD-CD-headline{
+    font-weight: normal;
   }
 }
 
@@ -451,7 +562,7 @@ nav img.user-profile {
 }
 
 /*ipad pro potrait*/
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px)  and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
+@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px)  and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
   body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
