--- a/css/admin_css/style_AdminDash.css
+++ b/css/admin_css/style_AdminDash.css
@@ -43,13 +43,14 @@ article h1 {
   margin-top: 10px;
 }
 
-/* Style the content */
+/* contains logo and welcome banner */
 
 article {
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
   padding: 10px;
+  width: 50vw;
 }
 
 /*For logos on top of welcome banner*/
