--- a/css/admin_css/style_AdminDash.css
+++ b/css/admin_css/style_AdminDash.css
@@ -57,11 +57,12 @@ article {
 
 img.logos {
   float: left;
-  padding-left: 10px;
+  /* padding-left: 10px; */
   height: 90px;
   width: 100px;
   margin-bottom: 2em;
   object-fit: contain;
+  transform: translate(-10px, 10px);
 }
 
 .logo-container {
@@ -135,11 +136,11 @@ aside p.Aelec-guide-txt {
   padding-bottom: 50px;
 }
 
-nav img.user-profile {
+/* nav img.user-profile {
   margin-top: 0;
   height: 40px;
   width: 40px;
-}
+} */
 
 @media only screen and (max-device-width: 1000px) {
   body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
@@ -204,8 +205,8 @@ nav img.user-profile {
   }
   .logos{
     object-fit: scale-down;
-    max-width:100%;
-    max-height:100%;
+    max-width: 100%;
+    max-height: 100%;
   }
   article{
     width: 100%;
@@ -364,9 +365,50 @@ nav img.user-profile {
   }
 }
 
+/*iPhone 4 portrait*/
+@media only screen and (device-height: 480px){
+  body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  section{
+    display: flex;
+    margin-left: 20px;
+    margin-top: 100px;
+    float: left;
+  }
+  .logos{
+    object-fit: scale-down;
+    max-width: 100%;
+    max-height: 100%;
+  }
+  article{
+    width: 100%;
+    flex-shrink: 2 !important;
+  }
+  .ADcountdown {
+    font-size: auto;
+  }
+  #ADaside-container{
+    float: left;
+    margin-left: 40px;
+    margin-top: -60px;
+    margin-bottom: 40px;
+    height: 100%;
+    max-width: 260px;
+  }
+  #AD-CD-contents {
+    display: block;
+    font-size: auto;
+  }
+  .Aelec-guide-txt{
+    margin-bottom: 60px;
+  }
+}
+
 /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
 /* portrait */
-@media only screen and (device-height : 568px) {
+@media only screen and (device-height: 568px) {
   body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
