--- a/css/admin_css/style1_addAdmin.css
+++ b/css/admin_css/style1_addAdmin.css
@@ -132,6 +132,30 @@ body {
   z-index: -1!important;
 }
 
+/* .modal-open {
+  padding: 0 !important;
+}
+
+.modal-content{
+  overflow-y: scroll !important;
+}
+
+#scroll_add::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: transparent;
+}
+
+#scroll_add::-webkit-scrollbar {
+  width: 5px;
+  background-color: #F5F5F5;
+}
+
+#scroll_add::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  background-color: gray;
+} */
+
 iframe {
   height: 700px;
 }
@@ -233,19 +257,29 @@ iframe {
 }
 
 .btn-button3 {
-  color: #eeeeee;
-  background: #124254;
-  border-color: #124254;
-  box-shadow: none;
+  color: #124254;
+  background-color: #fece4b;
+  border-bottom: 2px solid #fece4b;
   padding: 10px 20px;
   margin: 25px 5px 15px 0px!important;
 }
 
-.btn-button3:hover {
-  background-color: #18566e !important;
-  color: #EEEEEE!important;
+.btn-button3:hover,
+.btn-button3:focus,
+.open>.dropdown-toggle.btn-button2 {
+  color: #124254;
+  background-color: #ffc324;
+  border-bottom: 2px solid #ffc324;
+  outline: none;
 }
 
+.btn-button3:active,
+.btn-button3.active {
+  color: #124254;
+  background-color: #ffea36;
+  border-top: 2px solid #ffea36;
+  margin-top: 2px;
+}
 @media only screen and (max-width: 600px) {
   .btn-button1 {
     margin: 25px 2px 5px 0px!important;
@@ -263,6 +297,9 @@ iframe {
   .btn-cancel {
     width: 30% !important;
     margin: 20px 15px 10px 0px!important;
+  }
+  div.cropper-container.cropper-bg{
+    width:auto !important;
   }
   
 }
@@ -352,7 +389,7 @@ iframe {
 
 /*BUTTON FOR SIGNATORY*/
 
-.btn-button3 {
+/* .btn-button3 {
   color: #eeeeee;
   margin-bottom: 4px !important;
   padding: 0px;
@@ -366,7 +403,7 @@ iframe {
 .btn-button3:hover {
   background-color: #18566e !important;
   color: #EEEEEE!important;
-}
+} */
 
 .container {
   max-width: 100%;
@@ -554,6 +591,21 @@ img.logos {
   max-width: 700px;
 }
 
+/* #add::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: transparent;
+}
+
+#add::-webkit-scrollbar {
+  width: 10px;
+  background-color: #F5F5F5;
+}
+
+#add::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  background-color: gray; */
+}
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
 
 @media (max-width: 600px) {
@@ -563,8 +615,6 @@ img.logos {
   }
 }
 
-#edit {
-    overflow-y:scroll;
-}
+
 
 
