--- a/css/admin_css/electionConfig.css
+++ b/css/admin_css/electionConfig.css
@@ -71,22 +71,39 @@ input[type="time"] {
 }
 
 .btn {
-    margin-top: 10px;
-    padding: 10px;
-    font-size: 15px;
-    color: #124254;
+    color: black;
     background-color: #fece4b;
     border-bottom: 2px solid #fece4b;
+    padding: 10px 20px;
+    margin: 30px 5px 15px 0px!important;
+    margin-top: 10px;
+    padding: 10px;
+    font-size: 11pt;
     border: none;
     border-radius: 5px;
-    font-family: 'Roboto-bold', sans-serif;
-    box-shadow: 1px 1px 5px #888888;
+    font-family: 'Roboto-regular',sans-serif;
+    box-shadow:
+    inset 0 0 2px 0 rgba(255,255,255,.4),
+    inset 0 0 3px 0 rgba(0,0,0,.4),
+    inset 0 0 3px 5px rgba(0,0,0,.05),
+    2px 2px 4px 0 rgba(0,0,0,.25);
+    border-radius: 4px;
+    opacity: 100%;
 }
-.btn:hover{
+
+.btn:hover,
+.btn:focus {
     color: #124254;
-    background-color: #ffc324;
-    border-bottom: 2px solid #ffc324;
+    background-color: #f3bc26;
     outline: none;
+}
+
+.btn:active,
+.btn.active {
+    color: #124254;
+    background-color: #ffea36;
+    border-top: 2px solid #ffea36;
+    margin-top: 2px;
 }
 
 .msg {
