--- a/css/admin_css/style1_addAdmin.css
+++ b/css/admin_css/style1_addAdmin.css
@@ -237,6 +237,12 @@ iframe {
   border-bottom: 2px solid #fece4b;
   padding: 10px 20px;
   margin: 25px 5px 15px 0px!important;
+  box-shadow:
+    inset 0 0 2px 0 rgba(255,255,255,.4),
+    inset 0 0 3px 0 rgba(255, 255, 255, 0.8),
+    inset 0 0 3px 5px rgba(255, 255, 255, 0.07),
+    2px 2px 4px 0 rgba(0,0,0,.25);
+  border-radius: 4px;
 }
 
 .btn-button2:hover,
@@ -595,8 +601,8 @@ img.logos {
 #add::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-  background-color: gray; */
-}
+  background-color: gray;
+} */
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
 
 @media (max-width: 600px) {
