--- a/css/student_css/style_monitor.css
+++ b/css/student_css/style_monitor.css
@@ -46,19 +46,19 @@
   letter-spacing: 6px;
   margin-top: 1%;
   }
-.Barch_container {
-  padding: 30px;
-  color: black;
-  display: grid;
-  grid-gap: 30px;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 5fr));
-  grid-template-rows: repeat(autofit, 30%);
-  text-align: center;
-  max-width: 80%;
-  margin-top: 3%;
-  margin-left: auto;
-  margin-right: auto;
-}
+  .Barch_container {
+    padding: 30px;
+    color: black;
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 5fr));
+    grid-template-rows: repeat(autofit, 30%);
+    text-align: center;
+    margin-top: 18px;
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 .Barch_container>div {
   border-radius: 20px;
   background-color: rgba(21, 54, 69, 0.85);
@@ -82,7 +82,7 @@
 }
 .Bpstn .Bname {
   margin-top: 10px;
-  color: #ffffff;
+  color: #ffb700;
   font-weight: bold;
   font-size: 20px;
   text-transform: uppercase;
@@ -90,26 +90,29 @@
   border-top-style: solid;
   border-top-width: 90%;
   padding-top: 10px;
+  font-family: 'Roboto-regular', sans-serif;
+	letter-spacing: 2px;
 }
 .Bpstn .Bpstn {
   margin-top: -10px;
-  color: #ffb700;
+  color: #ffffff;
   font-weight: bold;
   font-size: 150%;
   border-bottom-color: white;
   border-bottom-style: solid;
   border-bottom-width: 90%;
   padding-bottom: 10px;
+  font-style: italic;
 }
 .Bpstn .Bplat1 {
   margin-top: 15px;
-  color: white;
+  color: #ffb700;
   font-weight: bold;
   font-size: 120%;
   letter-spacing: 1px;
 }
 .Bpstn .Bplat2 {
-  color: #ffb700;
+  color: white;
   font-size: 100%;
   margin-top: -5px;
 }
@@ -160,7 +163,7 @@
 }
 .Bvcontainer{
 	position: relative;
-	margin-top: 5%;
+	margin-top: 1%;
 	justify-content: space-around;
 	display: grid; 
   grid-column-gap: 10%;
@@ -195,146 +198,42 @@
 	font-family: 'Roboto-regular', sans-serif;
   }
 
-/*Bar Graph-Vote Tally
-.con1 {
-	max-width: 80%;
-  z-index: 1000;
-	margin-left: auto;
-	margin-right: auto;
-}
-.Belec_container{
-	position: relative;
-	margin-top: 5%;
-	justify-content: space-around;
-	display: grid; 
-  grid-column-gap: 5%;
-	grid-row-gap: 5%;
-	grid-template-columns: repeat(auto-fit, minmax(100px, 2fr));
-}
-.style-1 {
-  list-style-type: none;
-  padding: 0;
-}
-.style-1 li {
-  background: #ffb700;
-  color: black;
-  font-weight: bold;
-  margin-bottom: 4px;
-  border-radius: 2px;
-  white-space: nowrap;
-  position: relative;
-}
-.style-1 em {
-  font-style: normal;
-  padding: 9px;
-  display: inline-block;
-}
-
-.style-2 {
-  list-style-type: none;
-  padding: 0;
-  justify-content: center;
-  align-items: center;
-}
-.style-2 li {
-  background: #1f6f8f;
-  color: white;
-  font-weight: bold;
-  margin-bottom: 4px;
-  border-radius: 2px;
-  white-space: nowrap;
-  position: relative;
-}
-.style-2 em {
-  font-style: normal;
-  padding: 8px;
-  display: inline-block;
-}
-.style-2 span {
-  float: right;
-  text-align: right;
-  border-radius: 2px;
-  padding: 8px;
-  background: rgba(0, 0, 0, 0.3);
-  animation: grow-padding-left 1s;
-}*/
-
-/*Vote Tally
-.Belec_container {
-  display: grid;
-  grid-gap: 20px;
-  grid-column: 100px;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
-  grid-template-rows: repeat(10, 200px);
-  text-align: center;
-  margin-top: 2%;
-}
-.Belec_container>div>img {
-  border-radius: 50%;
-}
-.Belec_container>div>p {
-  font-family: 'Roboto-regular', sans-serif;;
-  font-size: 15px;
-  object-fit: cover;
-  text-align: center;
-}
-.Bnum_votes {
-  margin-top: 1%;
-  font-family: 'Roboto-regular', sans-serif;;
-  color: rgb(177, 88, 88);
-  font-weight: bold;
-  text-align: center;
-  background-color: #fece4b;
-  margin-left: 25%;
-  width: 50%;
-}
-.Bname {
-  font-family: 'Roboto-regular', sans-serif;;
-  object-fit: cover;
-  text-align: center;
-  color: #003d55;
-}
-.Bposition {
-  font-family: 'Roboto-regular', sans-serif;;
-  color:#1d6986;
-  font-weight: bold;
-  text-align: center;
-  margin-top: -3.5%;
-}
-.Bparty {
-  font-family: 'Roboto-regular', sans-serif;;
-  color:rgb(221, 46, 46);
-  text-align: center;
-  margin-top: -3.5%;
-}*/
-
+/*Vote Tally*/
 .Belection_container {
 	display: grid;
-	grid-gap: 40px;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 2fr));
-	grid-template-rows: repeat(6, auto);
+	grid-column-gap: 30px;
+  grid-row-gap: 15px;
+	grid-template-columns: repeat(auto-fit, minmax(400px, 2fr));
+	grid-template-rows: repeat(5, auto);
 	padding-right: 5%;
 	padding-left: 5%;
-	padding-top: 4%;
 }
 .Bcan {
 	background-color:#1f6f8f;
-	color: white;
 	font-weight: initial;
-	width: 100%;
-  height: 35%;
+	width: auto;
+  height: 20%;
 	text-align: center;
   margin-top:2%;
   font-family: 'Roboto-regular', sans-serif;
+ 
+}
+
+.Bcan b{
+  color: white;
+  font-family: 'Roboto-regular', sans-serif;
+  padding-top: 50px;
+  font-size: 80%;
 }
 
 .Bcan span{
   background: #0f3849;
-	width: 25%;
+	width: 10%;
   height: 100%;
   font-family: 'Roboto-regular', sans-serif;
-	font-size: 140%;
   float: right;
+  padding: 4px;
+  color: white;
 }
 .Bposition1,
 .Bposition2,
@@ -348,10 +247,9 @@
 .Bposition10,
 .Bposition11 {
 	padding: 20px;
-	width: 100%;
-	height: auto;
 	/*box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);*/
-  border-radius: 2px;
+  height: auto;
+  border-radius: 2px; 
 }
 .Bposition1 h1,
 .Bposition2 h1,
@@ -364,11 +262,11 @@
 	font-size: 120%;
 	position: relative;
 	text-align: center;
-	margin-top: 5px;
   background-color: #ffb700;
   width: 100%;
-  height: 35%;
+  height: 33%;
   border-radius: 2px;
+  padding: 10px;
 }
 .Bposition6 h1,
 .Bposition7 h1,
@@ -385,3 +283,11 @@
 	margin-top: -5px;
 }
 
+/* Samsung Galaxy S3 & S4 ----------- */
+@media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 3){
+
+}
+	
+@media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 3){
+
+}
