minor line fixes in css - colors changes, some lines removed
:>

--- a/css/admin_css/style_monitor.css
+++ b/css/admin_css/style_monitor.css
@@ -78,7 +78,7 @@ h2.aHeader-txt {
 }
 .Bpstn .Bpstn {
 	margin-top: -10px;
-	color: black;
+	color: white;
 	font-weight: bold;
 	font-size: 130%;
 	border-bottom-color: white;
